@@ -184,6 +184,11 @@ JaWETypes.ApplicationType.LangDepName.SOAP = org.enhydra.shark.toolagent.SOAPToo
 JaWETypes.ApplicationType.Icon.SOAP = org/enhydra/jawe/shark/images/soapta.gif
 JaWETypes.ApplicationType.XPDLTemplate.SOAP = sharkappsoapta.xml
 
+JaWETypes.ApplicationType.Id.TSC = org.enhydra.shark.toolagent.TSCToolAgent
+JaWETypes.ApplicationType.LangDepName.TSC = org.enhydra.shark.toolagent.TSCToolAgentKey
+JaWETypes.ApplicationType.Icon.TSC = org/enhydra/jawe/shark/images/tscta.gif
+JaWETypes.ApplicationType.XPDLTemplate.TSC = sharkapptscta.xml
+
 JaWETypes.ApplicationType.Id.TXW = org.enhydra.shark.toolagent.TXWToolAgent
 JaWETypes.ApplicationType.LangDepName.TXW = org.enhydra.shark.toolagent.TXWToolAgentKey
 JaWETypes.ApplicationType.Icon.TXW = org/enhydra/jawe/shark/images/txwta.gif
@@ -209,7 +214,7 @@ JaWETypes.ApplicationType.LangDepName.XSLT = org.enhydra.shark.toolagent.XSLTToo
 JaWETypes.ApplicationType.Icon.XSLT = org/enhydra/jawe/shark/images/xsltta.gif
 JaWETypes.ApplicationType.XPDLTemplate.XSLT = sharkappxsltta.xml
 
-JaWETypes.ApplicationType.Order=default,BeanShell,CheckDocumentFormats,ExecuteSql,JavaClass,JavaScript,LDAP,Mail,Quartz,RuntimeApplication,Scheduler,SOAP,TXW,UserGroup,XPath,XPIL,XSLT
+JaWETypes.ApplicationType.Order=default,BeanShell,CheckDocumentFormats,ExecuteSql,JavaClass,JavaScript,LDAP,Mail,Quartz,RuntimeApplication,Scheduler,SOAP,TSC,TXW,UserGroup,XPath,XPIL,XSLT
 
 #################### Artifact
 
