@@ -29,6 +29,7 @@ org.enhydra.shark.toolagent.QuartzToolAgentKey=Quartz
 org.enhydra.shark.toolagent.RuntimeApplicationToolAgentKey=Runtime Application
 org.enhydra.shark.toolagent.SchedulerToolAgentKey=Scheduler
 org.enhydra.shark.toolagent.SOAPToolAgentKey=SOAP
+org.enhydra.shark.toolagent.TSCToolAgentKey=TSC
 org.enhydra.shark.toolagent.TXWToolAgentKey=TXW
 org.enhydra.shark.toolagent.UserGroupToolAgentKey=User Group
 org.enhydra.shark.toolagent.XPathToolAgentKey=XPath
